deploy/overlays/prod/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 96Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-web
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 96Mi
