deploy/overlays/prod/route-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-app
spec:
  hostnames:
    - t-hello-app.infrapad.ai
